--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "waylonflinn@gmail.com, anhnd.hust@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "katex": "^0.10.0-rc.1"
+    "katex": "^0.10.0"
   },
   "devDependencies": {
     "markdown-it": "^8.4.2",
